--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
     "underscore": "~1.8.3",
     "jquery": "~2.1.4",
     "angular": "~1.4.7",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "angular-bootstrap": "~0.14.3",
+    "angular-animate": "~1.4.7"
   }
 }
